# chip8

./: .clang-format  CMakeLists.txt  CmakeLists.txt
src/: chip8.cpp  chip8.h  main.cpp
